Fix issues with re-entry

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -58,6 +58,11 @@
       <ion-icon name="lock-open-outline"></ion-icon>
       <div>Unlock</div>
     </div>
+
+    <div class="unlock-app ion-text-center" (click)="clear()">
+      <ion-icon name="trash-outline"></ion-icon>
+      <div>Clear Vault</div>
+    </div>
   </form>
 </ion-content>
 
